[metadata]
name = protobuf-mysql-loader
author = Joe
description = template untested def needs fixing

[options]
python_requires = >= 3.9
packages = find:
package_dir = 
    = src
include_package_data = true
install_requires = 
    mysql-connector-python
    python-dotenv
    requests
    pytz
    protobuf

[options.packages.find]
where = src

[coverage:report]
exclude_lines = 
    if TYPE_CHECKING: